--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,17 +16,18 @@ build:
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.9
     - setuptools
     - setuptools-scm
-    - wheel
     - pip
   run:
-    - python >=3.7
-    - sunraster >=0.3.0,<0.4.0
-    - sunpy >=3.1.0
-    - scipy >=1.7.0
+    - python >=3.9
+    - dkist >=1.0.0
+    - ndcube >=2.1.2
     - pandas >=1.3.3
+    - scipy >=1.7.0
+    - sunpy >=5.0.0
+    - sunraster >=0.4.0
 
 test:
   imports:
