--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - pip
   run:
     - python >={{ python_min }}
+    - mpl-animators >=1.2.3
     - dkist >=1.0.0
     - ndcube >=2.3.0
     - pandas >=1.3.3
